@@ -1,8 +1,10 @@
+
 ## ----------------------------------------------------------------------- ##
 ## Next version
 ## ----------------------------------------------------------------------- ##
 
-- ?
+- R version: Generate seed from R. It is no longer necessary to set the
+  seed argument in ranger calls.
 
 ## ----------------------------------------------------------------------- ##
 ## Version 0.1.3
